added ca channel + summary + comparison scripts

--- a/NeuroML2/channel_summary/ChannelInfo.html
+++ b/NeuroML2/channel_summary/ChannelInfo.html
@@ -1,25 +1,63 @@
+<?xml version="1.0"?>
 <html>
-    <title>Channel information</title>
-    
-    <body>
-        <p style="font-family:arial">Channel information at: T = 35.0 degC, E_rev = 0 mV, [Ca2+] = 0.00043 mM</p>
-        <table>
-            <tr>
+  <title>Channel information</title>
+  <body>
+    <p style="font-family:arial">Channel information at: T = 35.0 degC, E_rev = 0 mV, [Ca2+] = 0.00043 mM</p>
+    <table>
+      <tr>
         <td width="130px">
-            <p style="font-size:80%;font-family:arial"><b>it</b></p>
-            <p style="font-size:80%;font-family:arial"><a href="../it.channel.nml">it.channel.nml</a></p>
-            <p style="font-size:80%;background-color:#8FBC8F;"><b>Ion: ca</b></p>
-            <p style="font-size:80%;font-family:arial">g = gmax * m<sup>2</sup> * h </p><br/>
-            <p style="font-size:80%;font-family:arial">...</p><br/>
+          <p style="font-size:80%;font-family:arial">
+            <b>it</b>
+          </p>
+          <p style="font-size:80%;font-family:arial">
+            <a href="../it.channel.nml">it.channel.nml</a>
+          </p>
+          <p style="font-size:80%;background-color:#8FBC8F;">
+            <b>Ion: ca</b>
+          </p>
+          <p style="font-size:80%;font-family:arial">g = gmax * m<sup>2</sup> * h </p>
+          <br/>
+          <p style="font-size:80%;font-family:arial">...</p>
+          <br/>
         </td>
         <td>
-        <a href="it.inf.png"><img alt="it steady state" src="it.inf.png" height="300"/></a>
+          <a href="it.inf.png">
+            <img alt="it steady state" src="it.inf.png" height="300"/>
+          </a>
         </td>
         <td>
-        <a href="it.tau.png"><img alt="it time course" src="it.tau.png" height="300"/></a>
+          <a href="it.tau.png">
+            <img alt="it time course" src="it.tau.png" height="300"/>
+          </a>
         </td>
-        </tr>
-        </table>
-    </body>
-
+      </tr>
+      <tr>
+        <td width="130px">
+          <p style="font-size:80%;font-family:arial">
+            <b>ca</b>
+          </p>
+          <p style="font-size:80%;font-family:arial">
+            <a href="../it.channel.nml">ca.channel.nml</a>
+          </p>
+          <p style="font-size:80%;background-color:#8FBC8F;">
+            <b>Ion: ca</b>
+          </p>
+          <p style="font-size:80%;font-family:arial">g = gmax * m<sup>2</sup> * h </p>
+          <br/>
+          <p style="font-size:80%;font-family:arial">...</p>
+          <br/>
+        </td>
+        <td>
+          <a href="ca.inf.png">
+            <img alt="it steady state" src="ca.inf.png" height="300"/>
+          </a>
+        </td>
+        <td>
+          <a href="ca.tau.png">
+            <img alt="it time course" src="ca.tau.png" height="300"/>
+          </a>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
